refactored dto response models
