# dto/leaderboard_dto.go
@@ -4,19 +4,19 @@ import "time"
 
 /*************** REQUEST DTOs ***************/
 
-type UpdateScoreRequest struct {
-	Delta int `json:"delta" binding:"required"`
-}
+// type UpdateScoreRequest struct {
+// 	Delta int `json:"delta" binding:"required"`
+// }
 
-type SetScoreRequest struct {
-	Score int `json:"score" binding:"required"`
-}
+// type SetScoreRequest struct {
+// 	Score int `json:"score" binding:"required"`
+// }
 
 /*************** RESPONSE DTOs ***************/
 
 type LeaderboardEntryResponse struct {
-	UserID        int64      `json:"user_id"`
-	ClubID        int64      `json:"club_id"`
+	User          User       `json:"user"`
 	Score         int        `json:"score"`
+	CurrentStreak int        `json:"current_streak"`
 	LastCheckedIn *time.Time `json:"last_checkedin,omitempty"`
 }
